fix double scrollbars issue, and made the jobInfo section scrollable when needed

--- a/client/src/css/searchJob.css
+++ b/client/src/css/searchJob.css
@@ -1,11 +1,18 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .all {
   background: linear-gradient(120deg, #2980b9, #8e44ad);
   width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  overflow-x: hidden;
-  overflow-y: auto;
+  
 }
 
 .searchForm {
@@ -84,7 +91,7 @@ form .search_field {
 
 .savedJobsTitle {
   padding: 50px;
-  height: 150;
+  height: 150px;
 }
 
 .noSavedJobs {
@@ -98,7 +105,7 @@ form .search_field {
   text-align: center;
   margin-top: 5px;
   margin-right: 15px;
-  width: 8%;
+  width: 15%;
   height: 40px;
   border: 1px solid;
   background: #2691d9;
@@ -117,8 +124,6 @@ form .search_field {
 
 .loader {
   position: absolute;
-  width: "100%";
-  height: "100";
   display: "flex";
   top: 50%;
   left: 50%;
@@ -127,20 +132,19 @@ form .search_field {
 .container {
   display: flex;
   height: 100vh;
-  overflow: hidden;
+  flex-direction: row;
 }
 
 .jobCardsContainer {
-  /* flex: 1; */
+  flex: 1; 
   overflow-y: auto;
   width: 35%;
   
 }
 
 .jobInfoContainer {
-  /* flex: 1; */
-  overflow-y: hidden;
-  height: 800px;
+  flex: 1; 
+  overflow-y: auto;
   width: 65%;
 }
 
@@ -153,6 +157,7 @@ form .search_field {
 }
 
 .jobInfoBody {
+  
   margin: 10px;
   padding: 20px;
   background-color: #F6F6F6;
